tests/ui/skip/duplicate_attr.stderr
error: encountered duplicate `#[skip]`
 --> tests/ui/skip/duplicate_attr.rs:5:15
  |
5 |     #[skip] #[skip]
  |               ^^^^

error: duplicate `#[skip]` here
 --> tests/ui/skip/duplicate_attr.rs:5:7
  |
5 |     #[skip] #[skip]
  |       ^^^^
